// This is your Prisma schema file,
// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

// Enums
enum Role {
  ADMIN
  GAME_MANAGER
}

enum MatchStatus {
  UPCOMING
  LIVE
  FINISHED
}

enum GameType {
  TEAM
  INDIVIDUAL
}

enum MatchResult {
  WIN
  LOSS
  DRAW
}

enum MatchStage {
  LEAGUE
  QUARTER_FINAL
  SEMI_FINAL
  FINAL
}

// Core Models
model Faculty {
  id          String   @id @default(uuid())
  name        String   @unique // "CSIT", "BCA", "BSW", "BBS" (Samriddhi College)
  colorCode   String?  @map("color_code") // For UI styling
  totalPoints Int      @default(0) @map("total_points")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  teams   Team[]
  players Player[]

  @@map("faculties")
}

model Player {
  id         String   @id @default(uuid())
  name       String
  facultyId  String   @map("faculty_id")
  faculty    Faculty  @relation(fields: [facultyId], references: [id], onDelete: Cascade)
  semester   String? // "5th", "3rd", etc.
  phone      String?
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  matchParticipants MatchParticipant[]

  @@index([facultyId])
  @@map("players")
}

model Organizer {
  id        String   @id @default(uuid())
  name      String
  email     String   @unique
  password  String   // Hashed password
  role      Role     @default(GAME_MANAGER)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  games Game[]

  @@map("organizers")
}

model Game {
  id          String    @id @default(uuid())
  name        String    @unique // "Futsal", "Chess", "Valorant", "Basketball"
  type        GameType
  pointWeight Int       @default(1) @map("point_weight") // Weight for leaderboard calculation
  organizerId String    @map("organizer_id")
  organizer   Organizer @relation(fields: [organizerId], references: [id])
  rulesText   String?   @map("rules_text") @db.Text
  icon        String?   // Lucide icon name
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  matches Match[]
  teams   Team[]

  @@index([organizerId])
  @@map("games")
}

model Team {
  id        String   @id @default(uuid())
  name      String // "CSIT 5th A", "BBS 1st"
  facultyId String   @map("faculty_id")
  faculty   Faculty  @relation(fields: [facultyId], references: [id], onDelete: Cascade)
  gameId    String   @map("game_id")
  game      Game     @relation(fields: [gameId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  matchParticipants MatchParticipant[]

  @@unique([facultyId, gameId, name])
  @@index([facultyId])
  @@index([gameId])
  @@map("teams")
}

model Match {
  id        String      @id @default(uuid())
  gameId    String      @map("game_id")
  game      Game        @relation(fields: [gameId], references: [id], onDelete: Cascade)
  startTime DateTime    @map("start_time")
  venue     String
  status    MatchStatus @default(UPCOMING)
  stage     MatchStage  @default(LEAGUE)
  winnerId  String?     @map("winner_id") // Can be TeamID or PlayerID
  createdAt DateTime    @default(now()) @map("created_at")
  updatedAt DateTime    @updatedAt @map("updated_at")

  participants MatchParticipant[]

  @@index([gameId])
  @@index([status])
  @@index([startTime])
  @@map("matches")
}

model MatchParticipant {
  id            String       @id @default(uuid())
  matchId       String       @map("match_id")
  match         Match        @relation(fields: [matchId], references: [id], onDelete: Cascade)
  teamId        String?      @map("team_id") // NULL for individual games
  team          Team?        @relation(fields: [teamId], references: [id], onDelete: Cascade)
  playerId      String?      @map("player_id") // NULL for team games
  player        Player?      @relation(fields: [playerId], references: [id], onDelete: Cascade)
  score         Int          @default(0)
  result        MatchResult?
  pointsEarned  Int          @default(0) @map("points_earned") // Points contributed to faculty

  @@index([matchId])
  @@index([teamId])
  @@index([playerId])
  @@map("match_participants")
}
