erDiagram
    FACULTY ||--o{ TEAM : "belongs to"
    FACULTY ||--o{ PLAYER : "belongs to"
    GAME ||--o{ MATCH : "has"
    MATCH ||--o{ MATCH_PARTICIPANT : "involves"
    TEAM ||--o{ MATCH_PARTICIPANT : "competes as"
    PLAYER ||--o{ MATCH_PARTICIPANT : "competes as"
    ORGANIZER ||--o{ GAME : "manages"

    FACULTY {
        string id PK
        string name "CSIT, BCA, BSW, BBS"
        int total_points "Calculated for overall trophy"
    }

    PLAYER {
        string id PK
        string name
        string faculty_id FK
        string semester "e.g., 5th"
        string phone
    }

    GAME {
        string id PK
        string name "Futsal, Chess, etc."
        string type "TEAM or INDIVIDUAL"
        string organizer_id FK "The 5th Sem CSIT lead"
        string rules_text
    }

    TEAM {
        string id PK
        string name "CSIT 5th A, BBS 1st, etc."
        string faculty_id FK
        string game_id FK
    }

    MATCH {
        string id PK
        string game_id FK
        datetime start_time
        string venue "Ground A, Hall B"
        string status "UPCOMING, LIVE, FINISHED"
        string stage "League, Semi-Final, Final"
        string winner_id "TeamID or PlayerID"
    }

    MATCH_PARTICIPANT {
        string id PK
        string match_id FK
        string team_id FK "Null for individual sports"
        string player_id FK "Null for team sports"
        int score
        string result "WIN, LOSS, DRAW"
    }

    ORGANIZER {
        string id PK
        string name
        string auth_id "Supabase User ID"
        string role "ADMIN or GAME_MANAGER"
    }